# qa_guru_graduation_project_ui

./: .env-example  .gitignore  README.md  config.py  conftest.py  const.py  index.html  pyproject.toml
.github/workflows/: test.yml
1/: index.html
1/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1/export/: influxDbData.txt  prometheusData.txt
1/history/: categories-trend.json  history-trend.json
1/widgets/: behaviors.json  duration-trend.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
2/: index.html
2/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2/export/: influxDbData.txt  prometheusData.txt
2/history/: duration-trend.json  history.json
2/widgets/: behaviors.json  categories-trend.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
3/: index.html
3/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
3/export/: influxDbData.txt  prometheusData.txt
3/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
3/widgets/: behaviors.json  duration.json  executors.json  severity.json  suites.json  summary.json
4/: index.html
4/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
4/export/: influxDbData.txt  prometheusData.txt
4/history/: categories-trend.json  history.json  retry-trend.json
4/widgets/: duration-trend.json  duration.json  executors.json  history-trend.json  (+2 more)
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
last-history/: history-trend.json  history.json  retry-trend.json
tests/: conftest.py  test_test.py
(+1303 files in other folders)
